[gd_scene load_steps=2 format=3 uid="uid://cprjy8ii57idl"]

[ext_resource type="Script" path="res://esena/menu.gd" id="1_rf77s"]

[node name="menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rf77s")

[node name="fondo" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 0.145098, 1, 0.313726)

[node name="MarginContainer" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(50, 50)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 20.0
offset_top = 4.0
offset_right = -14.0
offset_bottom = 140.0
grow_horizontal = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
custom_minimum_size = Vector2(777, 88)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="acto 1" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "file load y modi"

[node name="acto 2" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "load script "

[node name="acto 3" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "variant"

[node name="quit" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "quit"

[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/acto 1" to="." method="_on_acto_1_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/acto 2" to="." method="_on_acto_2_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/acto 3" to="." method="_on_acto_3_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/quit" to="." method="_on_quit_pressed"]
